src/test/ui/macros/macro-comma-behavior.std.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:20:23
   |
LL |     assert_eq!(1, 1, "{}",);
   |                       ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:23:23
   |
LL |     assert_ne!(1, 2, "{}",);
   |                       ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:29:29
   |
LL |     debug_assert_eq!(1, 1, "{}",);
   |                             ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:32:29
   |
LL |     debug_assert_ne!(1, 2, "{}",);
   |                             ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:37:18
   |
LL |         eprint!("{}",);
   |                  ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:49:18
   |
LL |         format!("{}",);
   |                  ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:53:19
   |
LL |     format_args!("{}",);
   |                   ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:60:17
   |
LL |         print!("{}",);
   |                 ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:71:21
   |
LL |     unimplemented!("{}",);
   |                     ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:80:24
   |
LL |             write!(f, "{}",)?;
   |                        ^^

error: aborting due to 10 previous errors

